# jerbito_prog_fonctionnelle

./: dune
01/: task.ml
02/: dune
04/: dune
07/: char_fonct.ml  dico1.ml  dico1.mli  dico2.mli  dune  foncteur.ml  roll.ml  roll.mli  tutorial.md
